<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.perfmon4j</groupId>
	<artifactId>perfmon4j-project</artifactId>
	<version>2.2.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>org.perfmon4j:perfmon4j-project</name>
	<description>A java instrumentation agent to monitor server performance in production application servers</description>
	<url>https://github.com/FollettSchoolSolutions/perfmon4j</url>
	<licenses>
		<license>
			<name>The GNU Lesser General Public License, version 3.0</name>
			<url>http://opensource.org/licenses/LGPL-3.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>David Deuchert</name>
			<email>perfmon4j@follettlearning.com</email>
			<organization>Follett School Solutions</organization>
			<organizationUrl>https://www.follett.com/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>git@github.com:FollettSchoolSolutions/perfmon4j.git</connection>
		<developerConnection>git@github.com:FollettSchoolSolutions/perfmon4j.git</developerConnection>
		<url>https://github.com/FollettSchoolSolutions/perfmon4j</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<name>OSS Sonatype Repository Hosting Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<name>OSS Sonatype Repository Hosting</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<modules>
		<module>agent-api</module>
		<module>dbupgrader</module>
		<module>base</module>
		<module>genericfilter</module>
		<module>servlet</module>
		<module>tomcat7</module>
		<module>tomcat55</module>
		<module>jbossweb7</module>
		<module>reportconsole</module>
		<module>utils</module>
		<module>wildfly8</module>
		<module>quarkus2x</module>
		<module>quarkus3x</module>
	</modules>

	<profiles>
		<profile>
			<!-- This profile must be included when using either the mvnCentral or 
				github profile -->
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.1.1</version>
						<configuration>
							<doctitle>${project.name} ${project.version}</doctitle>
							<windowtitle>${project.name} ${project.version}</windowtitle>
							<additionalparam>-Xdoclint:none</additionalparam>
							<additionalOptions>-Xdoclint:none</additionalOptions>
							<additionalJOption>-Xdoclint:none</additionalJOption>
							<source>11</source>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<gpgArguments>
								<arg>--batch</arg>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
								<arg>--passphrase</arg>
								<arg>${gpg.passphrase}</arg>
							</gpgArguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- This profile must be activated along with the release profile To 
				activate add "-P release,mvnCentral" to the maven command line -->
			<id>mvnCentral</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>3.0.0-M1</version>
						<configuration>
							<repositoryId>ossrh</repositoryId>
							<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<descriptors>
						<descriptor>src/assembly/src.xml</descriptor>
						<descriptor>src/assembly/bin.xml</descriptor>
					</descriptors>
					<appendAssemblyId>true</appendAssemblyId>
				</configuration>
				<executions />
			</plugin>
		</plugins>
	</build>

	<properties>
		<javassist.version>3.29.0-GA</javassist.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<DERBY_VERSION>10.10.2.0</DERBY_VERSION>
		<LOG4J_VERSION>1.2.14</LOG4J_VERSION>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${LOG4J_VERSION}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>${javassist.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.3.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

</project>
